Ajustes e teste de endpoints

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ MONGODB_URL=mongodb://admin:admin@mongodb:27017/auctions?authSource=admin
 MONGODB_DB=auctions
 
 # Configurações de Leilão
-AUCTION_DURATION=30m
+AUCTION_DURATION=30s
 BATCH_INSERT_INTERVAL=20s
 MAX_BATCH_SIZE=4
